пример поиска вложений в почте, пока не работает

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "node-imap": "^0.9.6"
+    "mailparser": "^3.6.4",
+    "node-imap": "^0.9.6",
+    "redis": "^4.6.7"
   }
 }
