--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,19 @@
 {
-    "git.ignoreLimitWarning": true,
     "cSpell.words": [
-        "mailparser"
+        "Вложения",
+        "почты",
+        "резюме",
+        "сервере",
+        "сервером",
+        "Соединение",
+        "сохранены",
+        "удалось",
+        "успешно",
+        "datetime",
+        "Egorov",
+        "libqp",
+        "Rostislav",
+        "seqno",
+        "uids"
     ]
 }
