--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "imap-node",
+  "name": "imap-searcher",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "mail searcher by imap protocol",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "http://git.it-rkomi.ru/egorov.rp/imap-searcher.git"
+  },
+  "author": "Rostislav Egorov",
   "license": "MIT",
   "dependencies": {
-    "@types/imap": "^0.8.37",
-    "base64-stream": "^1.0.0",
-    "imap": "^0.8.19",
-    "libqp": "^2.0.1",
-    "mailparser": "^3.6.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-imap": "^0.9.6",
     "quoted-printable": "^1.0.1",
-    "redis": "^4.6.7"
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
+  },
+  "devDependencies": {
+    "@types/base64-stream": "^1.0.2",
+    "@types/express": "^4.17.17",
+    "@types/libqp": "^1.1.1",
+    "@types/node": "^20.3.1",
+    "@types/node-imap": "^0.9.0",
+    "@types/nodemailer": "^6.4.8",
+    "@types/reflect-metadata": "0.1.0",
+    "concurrently": "^8.2.0",
+    "nodemon": "^1.14.9",
+    "typescript": "^5.1.3"
   }
 }
